FIX: cleanup some deprecations